2023-06-23  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.7-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.7-alpha02: Prom';git push
	git tag -a 5.1.7-alpha02 -m 'all: fix Intel compiler issue with	OpenMP pragma; ncremap/ncclimo cmp_sng fix';git push --tags

	* ncremap/ncclimo: Insert backslashes into cmp_sng to protect pipe characters from shell

2023-05-25  Charlie Zender  <zender@uci.edu>

	* ncremap/ncclimo: Excise all Cori-specific script commands

2023-05-22  Charlie Zender  <zender@uci.edu>

	* Fix Intel compiler error by using grd_nbr instead of grd_sz_in in OpenMP block

2023-05-21  Charlie Zender  <zender@uci.edu>

	* Tidy header files

2023-05-16  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.7-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.7-alpha01: Promotion';git push
	git tag -a 5.1.7-alpha01 -m 'Functionally identical to 5.1.6';git push --tags

2023-05-12  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.6 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.6: Crossroads';git push
	git tag -a 5.1.6 -m 'all: CF dfl; fix NCZarr overwrite/removal; ncap2: cmp_sng; ncclimo: --split, --stdin docs, eamxx; ncremap: vrt xtr dyn hrz/vrt_mrv ncr_in/out, vrt non-spt dmn lrv, cpl dmn, vrt tms prs->prs, --col_dmn;';git push --tags

	* Fix NaN->NaNf in in_4.cdl, beef-up nco_chk_nan()

2023-05-10  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.6-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.6-beta01: Monte Nido';git push
	git tag -a 5.1.6-beta01 -m 'ncap2: cmp_sng';git push --tags

	* ncap2 replace old nco_def_var_deflate() with new cmp_sng and nco_flt_def_out()

2023-05-05  Charlie Zender  <zender@uci.edu>

	* nco_scm.c: Fix cvs_Name back-compatibility issue

	* Perlmutter: add 'module load gsl' to ncremap/ncclimo --npo configuration

2023-05-03  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.6-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.6-alpha03: Smoker';git push