@@ -128,8 +128,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 5.1.7-alpha02
-@set doc-edition 5.1.7-alpha02
+@set nco-edition 5.1.7-alpha03
+@set doc-edition 5.1.7-alpha03
 @set copyright-years 1995--2023
 @set update-year 2023
 @set update-date 15 June 2023
@@ -29198,8 +29198,8 @@ whose attributes are to be renamed.
 <a name="bug_nc4_rename"></a> <!-- http://nco.sf.net/nco.html#bug_nc4_rename -->
 @end html
 @cartouche
-Caveat lector: Unforunately from 2007--present (March, 2021) the
-netCDF library (versions 4.0.0--4.7.4) contains bugs or limitations
+Caveat lector: Unforunately from 2007--present (June, 2023) the
+netCDF library (versions 4.0.0--4.9.2) contains bugs or limitations
 that sometimes prevent @acronym{NCO} from correctly renaming coordinate
 variables, dimensions, and groups in netCDF4 files. 
 (To our knowledge the netCDF library calls for renaming always work
