@@ -1,5 +1,9 @@
 2023-06-23  Charlie Zender  <zender@uci.edu>
 
+	* NCO 5.1.7-alpha03 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.1.7-alpha03: Cool Shades';git push
+	git tag -a 5.1.7-alpha03 -m '';git push --tags
+
 	* NCO 5.1.7-alpha02 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.1.7-alpha02: Prom';git push
 	git tag -a 5.1.7-alpha02 -m 'all: fix Intel compiler issue with	OpenMP pragma; ncremap/ncclimo cmp_sng fix';git push --tags
